--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,60 +1,24 @@
 <div layout="row" flex layout-align="center">
   <div flex-gt-xs="50" flex-gt-md="30" flex="70" layout="column" layout-align="center">
     <md-content   md-whiteframe="10">
-      <!--<form name="form" layout="column"  ng-submit="vm.login(form)">-->
-        <!--<md-toolbar layout="row" layout-padding layout-align="center center">-->
-          <!--<span class="md-toolbar-item md-headline">Login</span>-->
-        <!--</md-toolbar>-->
-        <!--<md-input-container layout="row" class="md-icon-float">-->
-          <!--<md-icon class="md-dark" aria-label="username">person</md-icon>-->
-          <!--<input flex="90" type="email" name="email" ng-model="vm.user.email" placeholder="Email" required>-->
-          <!--<div ng-messages="form.email.$error">-->
-            <!--<div ng-message="required">-->
-              <!--Please enter a valid e-mail.-->
-            <!--</div>-->
-            <!--<div ng-message="mongoose">-->
-              <!--{{vm.errors.password}}-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</md-input-container>-->
-        <!--<md-input-container  layout="row" class="md-icon-float">-->
-          <!--<md-icon class="md-dark" arial-label="password">lock</md-icon>-->
-          <!--<input flex="90" type="password" name="password" ng-model="vm.user.password" placeholder="Password" required>-->
-          <!--<div ng-messages="form.password.$error">-->
-            <!--<div ng-message="required">-->
-              <!--Password is required-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</md-input-container>-->
-        <!--<p class="help-block">{{ vm.errors.other }}</p>-->
-
-        <!--<div class="md-actions">-->
-          <!--<md-button aria-label="Cancel"  ui-sref="main">Cancel</md-button>-->
-          <!--<md-button class="md-primary" aria-label="Login" type="submit">Login</md-button>-->
-        <!--</div>-->
-      <!--</form>-->
       <md-toolbar layout="row" layout-padding layout-align="center center">
         <span class="md-toolbar-item md-headline">Sign up</span>
       </md-toolbar>
-      <form name="form"  layout-padding="3px"  ng-submit="vm.register(form)">
+      <form name="form"  layout-padding="3px"  ng-submit="vm.register(form)" layout="column">
 
-
-        <md-input-container class="md-block" flex-gt-sm="">
+        <md-input-container layout="row">
           <!--<label>Name</label>-->
           <md-icon class="md-dark" aria-label="name">person</md-icon>
-          <input type="text" name="name" class="form-control" ng-model="vm.user.name"
+          <input flex="90" type="text" name="name" class="form-control" ng-model="vm.user.name"
                  required placeholder="Name"/>
           <div ng-messages="form.name.$error">
             <div ng-message="required">Name is required.</div>
           </div>
         </md-input-container>
-
-
-
-        <md-input-container class="md-block" flex-gt-sm="">
+        <md-input-container layout="row">
           <label>Email</label>
           <md-icon class="md-dark" aria-label="mail">mail</md-icon>
-          <input type="email" name="email" class="form-control" ng-model="vm.user.email"
+          <input flex="90" type="email" name="email"  ng-model="vm.user.email"
                  required  minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/"
                  mongoose-error/>
           <div ng-messages="form.email.$error">
@@ -65,13 +29,8 @@
               {{vm.errors.password}}
             </div>
           </div>
-
         </md-input-container>
-
-
-
-
-        <md-input-container class="md-block" flex-gt-sm="">
+        <md-input-container layout="row">
           <label>Password</label>
           <md-icon class="md-dark" aria-label="password">vpn_key</md-icon>
           <input type="password" name="password" class="form-control" ng-model="vm.user.password"
@@ -89,11 +48,8 @@
               {{vm.errors.password}}
             </div>
           </div>
-
         </md-input-container>
-
-
-        <md-input-container class="md-block" flex-gt-sm="">
+        <md-input-container layout="row">
           <label>Confirm Password</label>
           <md-icon class="md-dark" aria-label="password">vpn_key</md-icon>
           <input type="password" name="confirmPassword" class="form-control" ng-model="vm.user.confirmPassword"
@@ -111,9 +67,6 @@
             </div>
           </div>
         </md-input-container>
-
-
-
         <div class="md-actions" layout="row" layout-align="center">
           <md-button aria-label="Cancel"  ui-sref="main">Cancel</md-button>
           <md-button class="md-primary" aria-label="sign up" type="submit">Sign up</md-button>
@@ -121,176 +74,8 @@
       </form>
     </md-content>
 
-    <!--<div class="form-module">-->
-    <!--<div class="toggle">-->
-    <!--<a class="btn btn-default btn-lg btn-toggler" ui-sref="main">-->
-    <!--<ng-md-icon icon="clear"></ng-md-icon>-->
-    <!--</a>-->
-    <!--<oauth-buttons classes="btn-block"></oauth-buttons>-->
-    <!--<a class="btn btn-default btn-lg btn-toggler " ui-sref="signup">-->
-    <!--<ng-md-icon icon="person_add"></ng-md-icon>-->
-    <!--</a>-->
-
-    <!--<div class="tooltip" >Sign up</div>-->
-    <!--</div>-->
-
-    <!--<form name="form" ng-submit="vm.login(form)">-->
-
-    <!--<h2>Login</h2>-->
-
-    <!--<md-input-container class="md-block" flex-gt-sm="">-->
-    <!--<label>Email</label>-->
-    <!--<input type="email" name="email" class="form-control" ng-model="vm.user.email"-->
-    <!--required >-->
-    <!--<div ng-messages="form.email.$error">-->
-    <!--<div ng-message="required">-->
-    <!--Please enter a valid e-mail.-->
-    <!--</div>-->
-    <!--<div ng-message="mongoose">-->
-    <!--{{vm.errors.password}}-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--</md-input-container>-->
-
-    <!--<md-input-container class="md-block" flex-gt-sm="">-->
-    <!--<label>Password</label>-->
-    <!--<input type="password" name="password" class="form-control" ng-model="vm.user.password"-->
-    <!--required/>-->
-    <!--<div ng-messages="form.password.$error">-->
-    <!--<div ng-message="required">-->
-    <!--Password is required-->
-    <!--</div>-->
-
-    <!--</div>-->
-    <!--</md-input-container>-->
-
-    <!--<p class="help-block">{{ vm.errors.other }}</p>-->
-
-    <!--<div>-->
-    <!--<button class="btn btn-inverse btn-lg btn-register" type="submit">-->
-    <!--Login-->
-    <!--</button>-->
-
-    <!--</div>-->
-
-    <!--<hr/>-->
-    <!--</form>-->
-    <!--</div>-->
   </div>
   </md-content>
 
 </div>
 
-
-
-<!--<div layout="row" >-->
-  <!--<div flex="30" hide-sm hide-xs>-->
-  <!--</div>-->
-<!--</div>-->
-<!--<div layout="row" >-->
-  <!--<div flex hide-sm hide-xs>-->
-  <!--</div>-->
-    <!--<div flex="60" >-->
-      <!--<div class="form-module">-->
-        <!--<div class="toggle">-->
-          <!--<a class="btn btn-default btn-lg btn-toggler " ui-sref="main">-->
-            <!--<ng-md-icon icon="clear"></ng-md-icon>-->
-          <!--</a>-->
-          <!--<oauth-buttons classes="btn-block"></oauth-buttons>-->
-          <!--<a class="btn btn-default btn-lg btn-login btn-toggler " ui-sref="login">-->
-            <!--<ng-md-icon icon="perm_identity"></ng-md-icon>-->
-          <!--</a>-->
-
-          <!--<div class="tooltip" >Login</div>-->
-        <!--</div>-->
-
-        <!--<form name="form" ng-submit="vm.register(form)">-->
-
-          <!--<h2>Sign up</h2>-->
-            <!--<md-input-container class="md-block" flex-gt-sm="">-->
-            <!--<label>Name</label>-->
-            <!--<input type="text" name="name" class="form-control" ng-model="vm.user.name"-->
-                   <!--required/>-->
-            <!--<div ng-messages="form.name.$error">-->
-              <!--<div ng-message="required">Name is required.</div>-->
-            <!--</div>-->
-            <!--</md-input-container>-->
-
-
-
-            <!--<md-input-container class="md-block" flex-gt-sm="">-->
-              <!--<label>Email</label>-->
-              <!--<input type="email" name="email" class="form-control" ng-model="vm.user.email"-->
-                     <!--required  minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/"-->
-                     <!--mongoose-error/>-->
-              <!--<div ng-messages="form.email.$error">-->
-                <!--<div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">-->
-                  <!--Your email must be between 10 and 100 characters long and look like an e-mail address.-->
-                <!--</div>-->
-                <!--<div ng-message="mongoose">-->
-                  <!--{{vm.errors.password}}-->
-                <!--</div>-->
-              <!--</div>-->
-
-            <!--</md-input-container>-->
-
-
-
-
-            <!--<md-input-container class="md-block" flex-gt-sm="">-->
-              <!--<label>Password</label>-->
-              <!--<input type="password" name="password" class="form-control" ng-model="vm.user.password"-->
-                     <!--ng-minlength="8"-->
-                     <!--required-->
-                     <!--mongoose-error/>-->
-              <!--<div ng-messages="form.password.$error">-->
-                <!--<div ng-message="required">-->
-                  <!--Password is required-->
-                <!--</div>-->
-                <!--<div ng-message="minlength">-->
-                  <!--Password must be at least 8 characters-->
-                <!--</div>-->
-                <!--<div ng-message="mongoose">-->
-                  <!--{{vm.errors.password}}-->
-                <!--</div>-->
-              <!--</div>-->
-
-            <!--</md-input-container>-->
-
-
-            <!--<md-input-container class="md-block" flex-gt-sm="">-->
-              <!--<label>Confirm Password</label>-->
-              <!--<input type="password" name="confirmPassword" class="form-control" ng-model="vm.user.confirmPassword"-->
-                     <!--match="vm.user.password"-->
-                     <!--ng-minlength="8" required/>-->
-              <!--<div ng-messages="form.confirmPassword.$error">-->
-                <!--<div ng-message="required">-->
-                  <!--Password is required-->
-                <!--</div>-->
-                <!--<div ng-message="minlength">-->
-                  <!--Password must be at least 8 characters-->
-                <!--</div>-->
-                <!--<div ng-message="match">-->
-                  <!--Passwords must match.-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</md-input-container>-->
-
-
-          <!--<div>-->
-            <!--<button class="btn btn-inverse btn-lg btn-register" type="submit">-->
-              <!--Sign up-->
-            <!--</button>-->
-
-          <!--</div>-->
-
-          <!--<hr/>-->
-
-        <!--</form>-->
-  <!--</div>-->
-  <!--</div>-->
-  <!--<div flex hide-sm hide-xs>-->
-
-  <!--</div>-->
-  <!--</div>-->
