--- a/client/app/chat/chat.html
+++ b/client/app/chat/chat.html
@@ -1,15 +1,15 @@
 <!--<navbar></navbar>-->
-<md-content layout="row" id="chatViewPort">
+<md-content flex layout="row" id="chatViewPort">
 
     <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="contacts" md-is-locked-open="$mdMedia('gt-xs')" ui-view="contacts">
 
     </md-sidenav>
-  <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="addContact" ui-view="addContact">
+  <!--<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="addContact" ui-view="addContact">-->
 
-  </md-sidenav>
-  <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="addGroup" ui-view="addGroup">
+  <!--</md-sidenav>-->
+  <!--<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="addGroup" ui-view="addGroup">-->
 
-  </md-sidenav>
+  <!--</md-sidenav>-->
 
   <md-content  flex layout="column" class="md-whiteframe-z2 " ui-view="messages">
 
