--- a/client/app/chat/contacts/contacts.html
+++ b/client/app/chat/contacts/contacts.html
@@ -2,40 +2,44 @@
 <md-toolbar md-whiteframe="2" layout="row" layout-align="center center" >
   <span layout-margin="3px"></span>
   <span flex>Friend List</span>
-  <ng-md-icon icon="flag" aria-label="Add User"   ng-class="{'md-primary':CCtrl.requests.length==0,'md-alert':CCtrl.requests.length>0}">
-    <md-tooltip>
-      {{CCtrl.requests.length}} New Requests
-    </md-tooltip>
-  </ng-md-icon>
-  <ng-md-icon icon="person_add" aria-label="Add User"  class="floater-right" ng-click="CCtrl.openAddFriends()"></ng-md-icon>
-  <span layout-margin="3px"></span>
+<!--<ng-md-icon icon="person_add" aria-label="Add User"  class="floater-right" ng-click="CCtrl.openAddFriends()"></ng-md-icon>-->
+  <!--<span layout-margin="3px"></span>-->
 </md-toolbar>
+<md-content flex>
+  <md-list flex style="height:1px">
+    <md-list-item ng-repeat="room in CCtrl.rooms | orderBy:'lastMessageDate_ms':true"
+                  ng-click="CCtrl.selectUser('par',room)"
+                  ng-class="{'user-offline':room.members[0].status=='Offline','user-online':room.members[0].status=='Online'}">
+      <div layout="row" flex>
+        <img alt="{{room.members[0].name }}" ng-src="{{room.members[0].img }}" class="md-avatar" />
+        <p flex>{{room.members[0].name}}</p>
+        <md-icon ng-class="{'md-primary':!room.newMessage,'md-accent':room.newMessage}" >messenger</md-icon>
+      </div>
 
-<md-list flex style="height:1px">
-  <md-list-item ng-repeat="room in CCtrl.rooms | orderBy:'lastMessageDate_ms':true"
-                ng-click="CCtrl.selectUser('par',room)"
-                ng-class="{'user-offline':room.members[0].status=='Offline','user-online':room.members[0].status=='Online'}">
-    <img alt="{{room.members[0].name }}" ng-src="{{room.members[0].img }}" class="md-avatar" />
-    <p>{{room.members[0].name}}</p>
-    <ng-md-icon icon="messenger"  aria-label="Open Chat"  ng-class="{'md-primary':!room.newMessage,'md-alert':room.newMessage}"></ng-md-icon>
-  </md-list-item>
-</md-list>
+      <md-divider></md-divider>
+    </md-list-item>
+  </md-list>
+</md-content>
+
 
 <md-toolbar md-whiteframe="2" layout="row" layout-align="center center" >
   <span layout-margin="3px"></span>
   <span flex>Group List</span>
 <!--<h4 class="title-bar">Group List-->
-  <ng-md-icon icon="group_add" aria-label="Add User"  class="floater-right" ng-click="CCtrl.openAddGroups()">
-  </ng-md-icon>
+  <!--<ng-md-icon icon="group_add" aria-label="Add User"  class="floater-right" ng-click="CCtrl.openAddGroups()">-->
+  <!--</ng-md-icon>-->
   <span layout-margin="3px"></span>
 </md-toolbar>
 <!--</h4>-->
-
+<md-content flex>
   <md-list flex style="height:1px">
     <md-list-item ng-repeat="group in CCtrl.groups | orderBy:'lastMessageDate_ms':true" ng-click="CCtrl.selectUser('group',group)">
       <img alt="{{group.name }}" ng-src="{{ group.img }}" class="md-avatar" />
       <p>{{group.name}}</p>
-      <ng-md-icon icon="messenger"  aria-label="Open Chat"  ng-class="{'md-primary':!group.newMessage,'md-alert':group.newMessage}"></ng-md-icon>
+      <!--<ng-md-icon icon="messenger"  aria-label="Open Chat"  ng-class="{'md-primary':!group.newMessage,'md-alert':group.newMessage}"></ng-md-icon>-->
+      <md-icon  ng-class="{'md-primary':!group.newMessage,'md-accent':group.newMessage}" >messenger</md-icon>
+      <md-divider></md-divider>
     </md-list-item>
   </md-list>
-<md-divider></md-divider>
+</md-content>
+
