--- a/client/index.html
+++ b/client/index.html
@@ -88,7 +88,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="components/auth/interceptor.service.js"></script>
+      <script src="components/auth/auth.service.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
@@ -105,12 +105,14 @@
       <script src="app/chat/information/information.js"></script>
       <script src="app/chat/messages/messages.controller.js"></script>
       <script src="app/chat/messages/messages.js"></script>
+      <script src="app/chat/pendings/pendings.controller.js"></script>
+      <script src="app/chat/request/request.controller.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="components/addUsersToGroup/addUsersToGroup.controller.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
-      <script src="components/auth/auth.service.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
       <script src="components/canvasDrawing/canvasDrawing.directive.js"></script>
