--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -3,7 +3,7 @@
   <div flex-gt-xs="50" flex-gt-md="30" flex="70" layout="column" layout-align="center">
     <md-content    md-whiteframe="10">
       <md-toolbar layout="row" layout-padding layout-align="center center">
-        <span class="md-toolbar-item md-headline">Login</span>
+        <span class="md-toolbar-item md-headline">Settings</span>
       </md-toolbar>
       <form name="form" layout="column" layout-padding="3px"  ng-submit="vm.login(form)">
 
@@ -44,8 +44,8 @@
         <p class="help-block"> {{ vm.message }} </p>
 
         <div class="md-actions" layout="row" layout-align="center" >
-          <md-button aria-label="Cancel" ng-click="vm.cancel()">Cancel</md-button>
-          <md-button class="md-primary" aria-label="Login" type="submit">Login</md-button>
+          <md-button aria-label="Cancel" ng-click="vm.cancel()">Back</md-button>
+          <md-button class="md-primary" aria-label="Login" type="submit">Save</md-button>
         </div>
         <!--<button class="btn btn-lg btn-primary btn-green" type="submit">Save changes</button>-->
         <!--<button class="btn btn-lg btn-primary " ng-click="vm.cancel()">Cancel changes</button>-->
